[package]
name = "remote_shell"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.14"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-core"] }
warp = "0.2.5"
